sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: type mismatch;
 found   : Unit
 required: Boolean
  while (changement=true){
                   ^